--- a/roles/taiga/templates/back/settings/local.py.j2
+++ b/roles/taiga/templates/back/settings/local.py.j2
@@ -1,12 +1,19 @@
 from .common import *
 
-MEDIA_URL = "http://192.168.6.199:8080/media/"
-STATIC_URL = "http://192.168.6.199:8080/static/"
-ADMIN_MEDIA_PREFIX = "http://192.168.6.199:8080/static/admin/"
+MEDIA_URL = "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/media/"
+STATIC_URL = "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/static/"
+ADMIN_MEDIA_PREFIX = "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/static/admin/"
 SITES["front"]["scheme"] = "http"
-SITES["front"]["domain"] = "192.168.6.199"
+SITES["front"]["domain"] = "{{ taiga_server_ip }}"
 
-# GRAVATAR_DEFAULT_AVATAR =  "http://192.168.6.199:8080/static/img/user-noimage.png"
+DATABASES = {
+    "default": {
+        "ENGINE": "django.db.backends.postgresql",
+        "NAME": "{{ taiga_database_name }}",
+    }
+}
+
+# GRAVATAR_DEFAULT_AVATAR =  "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/static/img/user-noimage.png"
 
 SECRET_KEY = "theveryultratopsecretkey"
 # openssl rand -base64 32
@@ -18,16 +25,51 @@ PUBLIC_REGISTER_ENABLED = False
 # DEFAULT_FROM_EMAIL = "no-reply@example.com"
 # SERVER_EMAIL = DEFAULT_FROM_EMAIL
 
-# Uncomment and populate with proper connection parameters
-# for enable email sending. EMAIL_HOST_USER should end by @domain.tld
-#EMAIL_BACKEND = "django.core.mail.backends.smtp.EmailBackend"
+#########################################
+## MAIL SYSTEM SETTINGS
+#########################################
+
+#DEFAULT_FROM_EMAIL = "john@doe.com"
+#CHANGE_NOTIFICATIONS_MIN_INTERVAL = 300 #seconds
+
+# EMAIL SETTINGS EXAMPLE
+#EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
 #EMAIL_USE_TLS = False
-#EMAIL_HOST = "localhost"
-#EMAIL_HOST_USER = ""
-#EMAIL_HOST_PASSWORD = ""
+#EMAIL_HOST = 'localhost'
 #EMAIL_PORT = 25
+#EMAIL_HOST_USER = 'user'
+#EMAIL_HOST_PASSWORD = 'password'
+
+# GMAIL SETTINGS EXAMPLE
+#EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+#EMAIL_USE_TLS = True
+#EMAIL_HOST = 'smtp.gmail.com'
+#EMAIL_PORT = 587
+#EMAIL_HOST_USER = 'youremail@gmail.com'
+#EMAIL_HOST_PASSWORD = 'yourpassword'
 
 # Uncomment and populate with proper connection parameters
 # for enable github login/singin.
+#GITHUB_URL = "https://github.com/"
+#GITHUB_API_URL = "https://api.github.com/"
 #GITHUB_API_CLIENT_ID = "yourgithubclientid"
 #GITHUB_API_CLIENT_SECRET = "yourgithubclientsecret"
+
+#########################################
+## THROTTLING
+#########################################
+
+#REST_FRAMEWORK["DEFAULT_THROTTLE_RATES"] = {
+#    "anon": "20/min",
+#    "user": "200/min",
+#    "import-mode": "20/sec",
+#    "import-dump-mode": "1/minute"
+#}
+
+#########################################
+## FEEDBACK
+#########################################
+
+# Note: See config in taiga-front too
+FEEDBACK_ENABLED = False
+#FEEDBACK_EMAIL = "support@taiga.io"
