--- a/roles/taiga/templates/conf/circus.conf.j2
+++ b/roles/taiga/templates/conf/circus.conf.j2
@@ -7,7 +7,7 @@ pubsub_endpoint = tcp://127.0.0.1:5556
 statsd = false
 
 [watcher:{{ taiga_user }}]
-working_dir = /home/{{ taiga_user }}/taiga-back
+working_dir = {{ taiga_folder_back }}
 cmd = gunicorn
 args = -w 3 -t 60 --pythonpath=. -b 127.0.0.1:8001 {{ taiga_user }}.wsgi
 uid = {{ taiga_user }}
@@ -24,10 +24,10 @@ stderr_stream.max_bytes = 10485760
 stderr_stream.backup_count = 4
 
 [env:{{ taiga_user }}]
-PATH = /home/{{ taiga_user }}/.venv/bin:$PATH
+PATH = {{ taiga_venv }}/bin:$PATH
 TERM=rxvt-256color
 SHELL=/bin/bash
 USER={{ taiga_user }}
 LANG=en_US.UTF-8
 HOME=/home/{{ taiga_user }}
-PYTHONPATH=/home/{{ taiga_user }}/.venv/lib/python3.4/site-packages
+PYTHONPATH={{ taiga_venv }}/lib/python3.4/site-packages
