--- a/roles/taiga/templates/conf/circus.conf.j2
+++ b/roles/taiga/templates/conf/circus.conf.j2
@@ -9,7 +9,7 @@ statsd = false
 [watcher:{{ taiga_user }}]
 working_dir = {{ taiga_folder_back }}
 cmd = gunicorn
-args = -w 3 -t 60 --pythonpath=. -b 127.0.0.1:8001 {{ taiga_user }}.wsgi
+args = -w 3 -t 60 --pythonpath=. -b 127.0.0.1:8001 taiga.wsgi
 uid = {{ taiga_user }}
 numprocesses = 1
 autostart = true
