Beautify, improve some notify calls, enable Django admin

--- a/roles/taiga/templates/back/settings/local.py.j2
+++ b/roles/taiga/templates/back/settings/local.py.j2
@@ -30,7 +30,7 @@ PUBLIC_REGISTER_ENABLED = False
 #########################################
 
 #DEFAULT_FROM_EMAIL = "john@doe.com"
-#CHANGE_NOTIFICATIONS_MIN_INTERVAL = 300 #seconds
+CHANGE_NOTIFICATIONS_MIN_INTERVAL = 300 #seconds
 
 # EMAIL SETTINGS EXAMPLE
 #EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
