--- a/roles/taiga/templates/etc/nginx/sites-available/taiga.j2
+++ b/roles/taiga/templates/etc/nginx/sites-available/taiga.j2
@@ -13,6 +13,7 @@ server {
     location / {
         root {{ taiga_folder_front }}/dist/;
         try_files $uri $uri/ /index.html;
+        # add_header X-Frame-Options DENY;
     }
 
     # Backend
@@ -27,15 +28,15 @@ server {
     }
 
     # Django admin access (/admin/)
-    #location /admin {
-    #    proxy_set_header Host $http_host;
-    #    proxy_set_header X-Real-IP $remote_addr;
-    #    proxy_set_header X-Scheme $scheme;
-    #    proxy_set_header X-Forwarded-Proto $scheme;
-    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #    proxy_pass http://127.0.0.1:8001$request_uri;
-    #    proxy_redirect off;
-    #}
+    location /admin {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://127.0.0.1:8001$request_uri;
+        proxy_redirect off;
+    }
 
     # Static files
     location /static {
