--- a/roles/yap/templates/etc/nginx/sites-available/yap.j2
+++ b/roles/yap/templates/etc/nginx/sites-available/yap.j2
@@ -2,7 +2,7 @@ server {
         listen {{ yap_port | default("80") }} default_server;
         # listen [::]:80 default_server ipv6only=on;
 
-        root /var/www/yap/public;
+        root /home/yap/www/public;
         index index.php index.html index.htm;
 
         # Make site accessible from http://localhost/
@@ -24,4 +24,6 @@ server {
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
         }
+
+        include h5bp/basic.conf;
 }
