Update development settings

--- a/roles/taiga/templates/back/settings/local.py.j2
+++ b/roles/taiga/templates/back/settings/local.py.j2
@@ -27,7 +27,7 @@ MAX_AGE_AUTH_TOKEN = {{ max_age_auth_token | default('None') }}
 SECRET_KEY = "theveryultratopsecretkey"
 # openssl rand -base64 32
 
-DEBUG = False
+DEBUG = True
 TEMPLATE_DEBUG = False
 PUBLIC_REGISTER_ENABLED = False
 
