Update taiga front to use taiga-yap branch

--- a/roles/taiga/templates/etc/systemd/system/circus.service.j2
+++ b/roles/taiga/templates/etc/systemd/system/circus.service.j2
@@ -1,3 +1,5 @@
+# {{ ansible_managed }}
+
 [Unit]
 Description=Circus process manager
 After=syslog.target network.target nss-lookup.target
@@ -10,4 +12,4 @@ Restart=always
 RestartSec=5
 
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
