--- a/roles/taiga/templates/back/settings/common.py.j2
+++ b/roles/taiga/templates/back/settings/common.py.j2
@@ -37,7 +37,7 @@ USE_X_FORWARDED_HOST = True
 SECURE_PROXY_SSL_HEADER = ("HTTP_X_FORWARDED_PROTOCOL", "https")
 
 # Errors report configuration
-SEND_BROKEN_LINK_EMAILS = True
+SEND_BROKEN_LINK_EMAILS = False
 IGNORABLE_404_ENDS = (".php", ".cgi")
 IGNORABLE_404_STARTS = ("/phpmyadmin/",)
 
@@ -165,13 +165,11 @@ EMAIL_BACKEND = "django.core.mail.backends.console.EmailBackend"
 
 DJMAIL_REAL_BACKEND = "django.core.mail.backends.console.EmailBackend"
 DJMAIL_SEND_ASYNC = True
-DJMAIL_MAX_RETRY_NUMBER = 3
+DJMAIL_MAX_RETRY_NUMBER = 1
 DJMAIL_TEMPLATE_EXTENSION = "jinja"
 
 # Events backend
 EVENTS_PUSH_BACKEND = "taiga.events.backends.postgresql.EventsPushBackend"
-# EVENTS_PUSH_BACKEND = "taiga.events.backends.rabbitmq.EventsPushBackend"
-# EVENTS_PUSH_BACKEND_OPTIONS = {"url": "//guest:guest@127.0.0.1/"}
 
 # Message System
 MESSAGE_STORAGE = "django.contrib.messages.storage.session.SessionStorage"
@@ -491,9 +489,9 @@ CHANGE_NOTIFICATIONS_MIN_INTERVAL = 60 #seconds
 # This functions should receive a Project parameter and return a dict with the desired configuration
 PROJECT_MODULES_CONFIGURATORS = {
     "github": "taiga.hooks.github.services.get_or_generate_config",
-    "gitlab": "taiga.hooks.gitlab.services.get_or_generate_config",
-    "bitbucket": "taiga.hooks.bitbucket.services.get_or_generate_config",
-    "gogs": "taiga.hooks.gogs.services.get_or_generate_config",
+    #"gitlab": "taiga.hooks.gitlab.services.get_or_generate_config",
+    #"bitbucket": "taiga.hooks.bitbucket.services.get_or_generate_config",
+    #"gogs": "taiga.hooks.gogs.services.get_or_generate_config",
 }
 
 BITBUCKET_VALID_ORIGIN_IPS = ["131.103.20.165", "131.103.20.166", "104.192.143.192/28", "104.192.143.208/28"]
@@ -507,17 +505,19 @@ WEBHOOKS_ENABLED = True
 
 
 # If is True /front/sitemap.xml show a valid sitemap of taiga-front client
-FRONT_SITEMAP_ENABLED = False
-FRONT_SITEMAP_CACHE_TIMEOUT = 24*60*60  # In second
+FRONT_SITEMAP_ENABLED = True
+FRONT_SITEMAP_CACHE_TIMEOUT = 24 * 60 * 60  # In second
 
 EXTRA_BLOCKING_CODES = []
 
 MAX_PRIVATE_PROJECTS_PER_USER = 0 # None == no limit
 MAX_PUBLIC_PROJECTS_PER_USER = None # None == no limit
-MAX_MEMBERSHIPS_PRIVATE_PROJECTS = None # None == no limit
+MAX_MEMBERSHIPS_PRIVATE_PROJECTS = 0 # None == no limit
 MAX_MEMBERSHIPS_PUBLIC_PROJECTS = None # None == no limit
 
 MAX_PENDING_MEMBERSHIPS = 30 # Max number of unconfirmed memberships in a project
+
+FIRST_DAY_OF_WEEK = 1
 
 from .sr import *
 
