--- a/roles/taiga/templates/back/settings/local.py.j2
+++ b/roles/taiga/templates/back/settings/local.py.j2
@@ -1,8 +1,14 @@
+# {{ ansible_managed }}
+
 from .common import *
-#smth
 MEDIA_URL = "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/media/"
 STATIC_URL = "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/static/"
+
 ADMIN_MEDIA_PREFIX = "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/static/admin/"
+
+ALLOWED_HOSTS = ["{{ taiga_server_ip | default('*') }}", "localhost", "127.0.0.1", "[::1]"]
+
+
 SITES["front"]["scheme"] = "http"
 SITES["front"]["domain"] = "{{ taiga_server_ip }}"
 
@@ -13,37 +19,20 @@ DATABASES = {
     }
 }
 
-PASSWORD_HASHERS = [
-    'django.contrib.auth.hashers.BCryptSHA256PasswordHasher',
-    'django.contrib.auth.hashers.BCryptPasswordHasher',
-    'django.contrib.auth.hashers.PBKDF2PasswordHasher',
-    'django.contrib.auth.hashers.PBKDF2SHA1PasswordHasher',
-]
-
 MAX_AGE_AUTH_TOKEN = {{ max_age_auth_token | default('None') }}
 
-# GRAVATAR_DEFAULT_AVATAR =  "http://{{ taiga_server_ip }}:{{ taiga_server_port }}/static/img/user-noimage.png"
 
 SECRET_KEY = "theveryultratopsecretkey"
 # openssl rand -base64 32
 
-DEBUG = True
+DEBUG = False
 TEMPLATE_DEBUG = False
 PUBLIC_REGISTER_ENABLED = False
 
-# DEFAULT_FROM_EMAIL = "no-reply@example.com"
-# SERVER_EMAIL = DEFAULT_FROM_EMAIL
-
 CHANGE_NOTIFICATIONS_MIN_INTERVAL = 60 #seconds
 
+TIME_ZONE = "Europe/Bratislava"
 
-# Uncomment and populate with proper connection parameters
-# for enable github login/singin.
-#GITHUB_URL = "https://github.com/"
-#GITHUB_API_URL = "https://api.github.com/"
-#GITHUB_API_CLIENT_ID = "yourgithubclientid"
-#GITHUB_API_CLIENT_SECRET = "yourgithubclientsecret"
-
-FEEDBACK_ENABLED = False
+SEARCHES_MAX_RESULTS = 100
 
 WEBHOOKS_ENABLED = True
