Update taiga service

--- a/roles/taiga/templates/etc/systemd/system/taiga.service.j2
+++ b/roles/taiga/templates/etc/systemd/system/taiga.service.j2
@@ -3,6 +3,8 @@
 [Unit]
 Description=Taiga's Backend Engine
 After=network.target
+Wants=nginx.service
+BindsTo=postgresql.service
 
 [Service]
 Type=forking
