Update php-fpm configuration
 - add yap pool instead of default www pool
   - solves issues with permissions
   - introduces problem with permissions (now pool has rights as `yap`)
 - improve systemd unit file, now php-fpm is part of nginx
   - also copy unit to nginx.service.wants folder
 - update nginx configuration to use socket

--- a/roles/taiga/templates/etc/systemd/system/circus.service.j2
+++ b/roles/taiga/templates/etc/systemd/system/circus.service.j2
@@ -3,6 +3,7 @@
 [Unit]
 Description=Circus process manager
 After=syslog.target network.target nss-lookup.target
+BindsTo=postgresql.service
 
 [Service]
 Type=simple
