--- a/roles/taiga/templates/back/settings/local.py.j2
+++ b/roles/taiga/templates/back/settings/local.py.j2
@@ -36,3 +36,8 @@ TIME_ZONE = "Europe/Bratislava"
 SEARCHES_MAX_RESULTS = 100
 
 WEBHOOKS_ENABLED = True
+
+MAX_PRIVATE_PROJECTS_PER_USER = 0 # None == no limit
+MAX_PUBLIC_PROJECTS_PER_USER = None # None == no limit
+MAX_MEMBERSHIPS_PRIVATE_PROJECTS = 0 # None == no limit
+MAX_MEMBERSHIPS_PUBLIC_PROJECTS = 0 # None == no limit
